--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,16 @@
-name: build
+name: deploy
 
-#@Todo change to ignore main
 on:
   push:
-    branches-ignore:
+    branches:
       - "github_workflow"
-  workflow_dispatch:
-
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -33,14 +29,6 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
       - name: Run the Maven verify phase
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=cuttingedgecommunity -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend -Dsonar.host.url=https://sonarcloud.io
-  deploy:
-    # @TODO
-    #change when on main
-    if: ${{ github.ref == 'refs/heads/github_workflow' }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
       - name: Show target folder
         run: ls && ls target
       - name: Build the Docker image
