--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17 for x64
         uses: actions/setup-java@v3
         with:
@@ -21,17 +22,30 @@ jobs:
           distribution: 'zulu'
           architecture: 'x64'
           cache: maven
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+
       - name: Run the Maven verify phase
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=cuttingedgecommunity -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend -Dsonar.host.url=https://sonarcloud.io
+
       - name: Show target folder
         run: ls && ls target
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/cuttingedgecommunity/coindashboard-backend:latest
-      - name: Push the Docker image
-        run: docker push ghcr.io/cuttingedgecommunity/coindashboard-backend:latest
+
+      - name: Log in to GitHub container registry
+        uses: docker/login-action@v1.10.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }
+
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ghcr.io/cuttingedgecommunity/coindashboard-backend:latest
+          file: ./Dockerfile
