--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Run the Maven verify phase
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=cuttingedgecommunity -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend -Dsonar.host.url=https://sonarcloud.io
 
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
       - name: Show target folder
         run: ls && ls target
 
