--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,20 @@
 name: build
 
-#@Todo change to ignore main
 on:
   push:
     branches-ignore:
-      - "github_workflow"
-
+      - "main"
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17 for x64
         uses: actions/setup-java@v3
         with:
@@ -24,25 +22,17 @@ jobs:
           distribution: 'zulu'
           architecture: 'x64'
           cache: maven
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+
       - name: Run the Maven verify phase
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=cuttingedgecommunity -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend -Dsonar.host.url=https://sonarcloud.io
-  deploy:
-    # @TODO
-    #change when on main
-    if: ${{ github.ref == 'refs/heads/github_workflow' }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-      - name: Show target folder
-        run: ls && ls target
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/cuttingedgecommunity/coindashboard-backend:latest
-      - name: Push the Docker image
-        run: docker push ghcr.io/cuttingedgecommunity/coindashboard-backend:latest
+        run: >
+          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar 
+          -Dsonar.organization=cuttingedgecommunity 
+          -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend 
+          -Dsonar.host.url=https://sonarcloud.io
