--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,11 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
       - name: Run the Maven verify phase
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=cuttingedgecommunity -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend -Dsonar.host.url=https://sonarcloud.io
-
-      - name: Show target folder
-        run: ls && ls target
+        run: >
+          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar 
+          -Dsonar.organization=cuttingedgecommunity 
+          -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend 
+          -Dsonar.host.url=https://sonarcloud.io
 
       - name: Log in to GitHub container registry
         uses: docker/login-action@v1.10.0
