--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
+        with:
+          path: target/
 
   deploy:
     runs-on: ubuntu-latest
