Specify file type in "Upload artifacts" step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: target
-          path: target/
+          path: target/*.jar
 
   deploy:
     runs-on: ubuntu-latest
