--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>h2</artifactId>
       <version>2.1.212</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>7.0.4.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
