--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
       <artifactId>hibernate-validator</artifactId>
       <version>7.0.4.Final</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
