Example on autonomic documentation works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-ant_path_matcher=spring.mvc.path match.matching-strategy
+springdoc.api-docs.path=/api-docs
+spingdoc.swagger-ui.path=/swagger-ui-custom.html
