SIB-118 Cleanup Moved hardcoded strings to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=coindashboard
 spring.data.mongodb.username=root
 spring.data.mongodb.password=mongo
+
+
+coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
+coinmarketcap.path=https://pro-api.coinmarketcap.com/v2
+
+coingecko.path=https://api.coingecko.com/api/v3
