--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.data.mongodb.host=mongo
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=coindashboard
+spring.data.mongodb.username=root
+spring.data.mongodb.password=mongo
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
+coinmarketcap.path=https://pro-api.coinmarketcap.com/v2
+
+coingecko.path=https://api.coingecko.com/api/v3
