--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
       <version>2.7.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
