--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,9 @@
               <goal>check</goal>
             </goals>
             <configuration>
+              <excludes>
+                <exclude>com/capgemini/fs/coindashboard/controller/utils/*</exclude>
+              </excludes>
               <rules>
                 <rule>
                   <element>PACKAGE</element>
