SIB-145 CoinsTranslator - tests added
Added tests to previous commit:
*added tests for function getCoinsNames for both CoinGeckoApiClient and CoinMarketCapApiClient
*added tests function initialize for both CoinGeckoTranslator and CoinMarketCapTranslator

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,8 +7,9 @@ spring.data.mongodb.password=mongo
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
-coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
+coinmarketcap.key=b54bcf4d-1bca-4e8e-9a24-22ff2c3d462c
 coinmarketcap.key2=097f6f3e-9777-42de-9686-54a713ec3c90
-coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
+coinmarketcap.key3=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
+coinmarketcap.path=https://sandbox-api.coinmarketcap.com/v1
 
 coingecko.path=https://api.coingecko.com/api/v3
