SIB-136 MongoInit -initializing 250 coins in first place 4 times -test for initilization

--- a/src/test/application.properties
+++ b/src/test/application.properties
@@ -8,6 +8,6 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
 coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
-coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
+coinmarketcap.path=https://sandbox-api.coinmarketcap.com/v1
 
 coingecko.path=https://api.coingecko.com/api/v3
