--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,7 +7,7 @@ spring.data.mongodb.password=mongo
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
-coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
+coinmarketcap.key=test-key
 coinmarketcap.path=https://sandbox-api.coinmarketcap.com/v1
 
 coingecko.path=https://api.coingecko.com/api/v3
