--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.data.mongodb.database=coindashboard
 spring.data.mongodb.username=root
 spring.data.mongodb.password=mongo
 
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.api-docs.path=/api/docs
+springdoc.swagger-ui.path=/api/swagger-ui.html
 
 
 coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
