SIB-156 Add prometheus and grafana Why? Enable metric visualization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "27017:27017"
     volumes:
       - mongodbdata:/data/db
+  
+
   coindashboard-backend:
     build: .
     restart: always
@@ -16,5 +18,22 @@ services:
       - COINDASHBOARD_RUNTIME_ENVIRONMENT=DOCKER
     depends_on:
       - mongo
+
+  prometheus:
+    build: ./prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    depends_on:
+      - coindashboard-backend
+  
+  grafana:
+    build: ./grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+    - prometheus
+
 volumes:
   mongodbdata:
