--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.data.mongodb.password=mongo
 
 springdoc.api-docs.path=/api/docs
 springdoc.swagger-ui.path=/api/swagger-ui.html
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+
 
 
 coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
