SIB-168 Implemented Search Method - Implemented Query for filtering name and symbol by regex - Implemented Cache Service for search by regex - Implemented api/coins/find/{regex} endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ coinmarketcap.key2=097f6f3e-9777-42de-9686-54a713ec3c90
 coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
 
 coingecko.path=https://api.coingecko.com/api/v3
+
+controller.search-limit=5
