--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,3 +11,5 @@ coinmarketcap.key=test-key
 coinmarketcap.path=https://sandbox-api.coinmarketcap.com/v1
 
 coingecko.path=https://api.coingecko.com/api/v3
+
+controller.search-limit=5
