--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,11 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=coindashboard
 spring.data.mongodb.username=root
 spring.data.mongodb.password=mongo
+spring.data.mongodb.connection-pool-size=200
+spring.data.mongodb.connection-pool-wait-time=10
+
+thread-pool-config.core-pool-size=10
+thread-pool-config.queue-capacity=100
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
