--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.config.import=optional:secrets.properties
 
+secret.key="${app.key}"
+secret.iv="${app.iv}}"
+
 secret.properties=spring.data.mongodb.username \
   spring.data.mongodb.password \
   coinmarketcap.key \
@@ -18,8 +21,6 @@ springdoc.api-docs.path=/api/docs
 springdoc.swagger-ui.path=/api/swagger-ui.html
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-
-
 
 coinmarketcap.key2=097f6f3e-9777-42de-9686-54a713ec3c90
 coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
