--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Display structure of downloaded files
+        run: ls -R
+
       - name: Set up JDK 17 for x64
         uses: actions/setup-java@v3
         with:
@@ -35,9 +38,6 @@ jobs:
           -Dsonar.projectKey=CuttingEdgeCommunity_coindashboard-backend 
           -Dsonar.host.url=https://sonarcloud.io
         with:
-          secrets: |
-            "app.key=${{ secrets.APP_KEY }}"
-            "app.iv={{ secrets.APP_IV }}"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
