--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Display structure of downloaded files
-        run: ls -R
+      - name: Inject secrets to a file
+        run: echo "something" >> ./src/main/resources/secrets.properties
 
       - name: Set up JDK 17 for x64
         uses: actions/setup-java@v3
