enable deploy-traefik

--- a/.github/workflows/deploy-traefik.yml
+++ b/.github/workflows/deploy-traefik.yml
@@ -21,7 +21,7 @@ jobs:
   
   deploy-traefik:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v3
