--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Inject secrets to a file
-        run: echo $'secret.key=${{ secrets.APP_KEY }}\nsecret.iv=${{ secrets.APP_IV }}' >> ./src/main/resources/secrets.properties
+        run: echo $'secret.key=${{ secrets.APP_KEY }}\nsecret.iv=${{ secrets.APP_IV }}' >> ./src/main/resources/secrets.properties && cp ./src/main/resources/secrets.properties ./src/test/resources/secrets.properties
       - name: Set up JDK 17 for x64
         uses: actions/setup-java@v3
         with:
