--- a/.github/workflows/deploy-traefik.yml
+++ b/.github/workflows/deploy-traefik.yml
@@ -36,6 +36,6 @@ jobs:
       - name: Build and push container image to registry
         uses: docker/build-push-action@v2
         with:
-          context: ./mongoDB
+          context: ./traefik
           push: true
           tags: ghcr.io/cuttingedgecommunity/coindashboard-traefik:latest
