--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=coindashboard
-spring.data.mongodb.username=root
-spring.data.mongodb.password=mongo
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=mongo
 
 springdoc.api-docs.path=/api/docs
 springdoc.swagger-ui.path=/api/swagger-ui.html
@@ -11,8 +11,8 @@ management.endpoint.health.show-details=always
 
 
 
-coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
-coinmarketcap.key2=097f6f3e-9777-42de-9686-54a713ec3c90
+#coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
+#coinmarketcap.key2=097f6f3e-9777-42de-9686-54a713ec3c90
 coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
 
 coingecko.path=https://api.coingecko.com/api/v3
