--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,9 @@
+spring.config.import=optional:secrets.properties
+
 spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=coindashboard
-spring.data.mongodb.username=root
-spring.data.mongodb.password=mongo
+
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
