--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+spring.config.import=optional:secrets.properties
+
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=coindashboard
-spring.data.mongodb.username=root
-spring.data.mongodb.password=mongo
+
 spring.data.mongodb.connection-pool-size=200
 spring.data.mongodb.connection-pool-wait-time=10
 
@@ -13,11 +14,6 @@ springdoc.swagger-ui.path=/api/swagger-ui.html
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-
-
-
-coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
-coinmarketcap.key2=097f6f3e-9777-42de-9686-54a713ec3c90
 coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
 
 coingecko.path=https://api.coingecko.com/api/v3
