--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,9 @@
+spring.config.import=optional:secrets.properties
+
 spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=coindashboard
-spring.data.mongodb.username=root
-spring.data.mongodb.password=mongo
+
 spring.data.mongodb.connection-pool-size=200
 spring.data.mongodb.connection-pool-wait-time=10
 
