--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,6 @@ springdoc.swagger-ui.path=/api/swagger-ui.html
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-
-
-
 coinmarketcap.key=dc8ad4b3-5f8a-4190-84e9-34efc1fd81a9
 coinmarketcap.key2=097f6f3e-9777-42de-9686-54a713ec3c90
 coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
@@ -23,3 +20,7 @@ coinmarketcap.path=https://pro-api.coinmarketcap.com/v1
 coingecko.path=https://api.coingecko.com/api/v3
 
 controller.search-limit=5
+spring.config.import=optional:cache.properties
+
+
+
