--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,3 +18,6 @@ coinmarketcap.path=https://sandbox-api.coinmarketcap.com/v1
 coingecko.path=https://api.coingecko.com/api/v3
 
 controller.search-limit=5
+
+
+spring.config.import=optional:cache.properties
