Added fetching secrets from env variables for production profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.config.import=optional:secrets.properties
 
+spring.data.mongodb.username=${MONGODB_USERNAME}
+spring.data.mongodb.password=${MONGODB_PASSWORD}
+coinmarketcap.key=${COINMARKETCAP_KEY}
+coinmarketcap.key2=${COINMARKETCAP_KEY2}
+
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=coindashboard
 
